--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -2,8 +2,8 @@
 <p><%= notice %></p>
 <table>
   <tr>
-    <th>タイトル</th>
-    <th>内容</th>
+    <th>title</th>
+    <th>content</th>
   </tr>
 <% @tasks.each do |task| %>
   <tr>
