indexを降順に整理+Rspecテストコード作成

--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -2,12 +2,12 @@
 <p><%= notice %></p>
 <table>
   <tr>
-    <th>title</th>
-    <th>content</th>
+    <th>タイトル</th>
+    <th>内容</th>
   </tr>
 <% @tasks.each do |task| %>
   <tr>
-    <td><%= task.title %></td>
+    <td class="task_row"><%= task.title %></td>
     <td><%= task.content %></td>
     <td><%= link_to '詳細', task_path(task.id) %></td>
     <td><%= link_to '編集', edit_task_path(task.id) %></td>
