--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -1,4 +1,10 @@
 <h2>タスク詳細画面</h2>
 <p>タイトル: <%= @task.title %></p>
 <p>内容: <%= @task.content %></p>
+<p>期限: <%= @task.deadline %></p>
+<p>ステータス: 
+  <% if @task.status == 0 %>未着手<% end %>
+  <% if @task.status == 1 %>着手中<% end %>
+  <% if @task.status == 2 %>完了<% end %>
+</p>
 <%= link_to '一覧へ戻る', tasks_path %>
