--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -11,6 +11,7 @@
     <th>内容</th>
     <th>期限</th>
     <th>ステータス</th>
+    <th>優先度</th>
   </tr>
 <% @tasks.each do |task| %>
   <tr>
@@ -18,6 +19,7 @@
     <td><%= task.content %></td>
     <td><%= task.deadline %></td>
     <td><%= task.status %></td>
+    <td><%= task.priority %></td>
     <td><%= link_to '詳細', task_path(task.id) %></td>
     <td><%= link_to '編集', edit_task_path(task.id) %></td>
     <td><%= link_to '削除', task_path(task.id), method: :delete, data: {confirm: '削除してよろしいですか？'} %></td>
@@ -26,4 +28,5 @@
 </table>
 <%= link_to '新規作成', new_task_path %>
 <%= link_to 'タスクを終了期限順にソートする', tasks_path(sort_expired:'true') %>
+<%= link_to 'タスクを優先度順にソートする', tasks_path(sort_priority:'true') %>
 <%= link_to '一覧に戻る', tasks_path %>
