titleにindex追加,view修正

--- a/app/assets/stylesheets/tasks.scss
+++ b/app/assets/stylesheets/tasks.scss
@@ -3,17 +3,28 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 //task全体 
-
+ul{
+  list-style: none;
+}
 
 // index
+table{
+  margin-left: 10px;
+  margin-right: 30px;
+}
 .row{
   margin: 5px;
+  margin-right: 20px;
+}
+.index-menu{
+  margin-bottom: 10px;
 }
 .index_btn{
   width: 15px;
 }
 th{
   text-align: center;
+  background-color: blanchedalmond;
 }
 .index_form, .index_status{
   margin: 10px auto;
@@ -31,7 +42,7 @@ h3{
   width: 300px;
 }
 .task_status, .task_priority{
-  width: 150px;
+  width: 240px;
 }
 .form_btn{
   margin-top: 10px;
