--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -11,11 +11,11 @@
   <%= link_to '新規作成', new_task_path, class:"btn btn-primary" %>
   <%= link_to 'タスクを終了期限順にソートする', tasks_path(sort_expired:'true'), class:"btn btn-default" %>
   <%= link_to 'タスクを優先度順にソートする', tasks_path(sort_priority:'true'), class:"btn btn-default" %>
-  <%= link_to '一覧に戻る', tasks_path, class:"btn btn-default" %>
+  <%= link_to '作成日時順にソート', tasks_path, class:"btn btn-default" %>
 </div>
 <div class="contents">
   <div class="row">
-    <table class='table table-striped col-md-10'>
+    <table class='table table-striped table-hover'>
       <tr class="row">
         <th class="col-md-1">タスク名</th>
         <th class="col-md-5">内容</th>
@@ -41,4 +41,3 @@
     </table>
   </div>
 </div>
-<%= paginate @tasks %>
