--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -9,14 +9,27 @@
       </ul>
     </div>
   <% end %>
-  <div class="task_title">
+  <div class="f_form task_title form-group">
     <%= form.label :title %>
-    <%= form.text_field :title %>
+    <%= form.text_field :title, class:"form-control" %>
   </div>
-  <div class="task_title">
+  <div class="f_form task_content form-group">
     <%= form.label :content %>
-    <%= form.text_field :content %>
+    <%= form.text_area :content, class:"form-control" %>
   </div>
-  <%= form.submit %>
+  <div class="f_form task_deadline form-group">
+    <%= form.label :deadline %>
+    <%= form.date_field :deadline, class:"form-control" %>
+  </div>
+  <div class="f_form task_status form-group">
+    <%= form.label :status %>
+    <%= form.select :status, Task.statuses.keys, {include_blank: 'ステータスを選択してください'}, class:"form-control" %>
+  </div>
+  <div class="f_form task_priority form-group">
+    <%= form.label :priority %>
+    <%= form.select :priority, Task.priorities.keys, {include_blank: '優先度を設定してください'}, class:"form-control" %>
+  </div>
+  <%= form.submit '登録する', class:"btn btn-primary form_btn"%>
+  <%= link_to "一覧画面にもどる", tasks_path, class:"btn btn-default form_btn" %>
 <% end %>
-<%= link_to "一覧画面にもどる", tasks_path %>
+  <%= link_to "内容をリセット", new_task_path, class:"btn btn-danger form_btn" %>
