--- a/app/assets/stylesheets/tasks.scss
+++ b/app/assets/stylesheets/tasks.scss
@@ -1,3 +1,72 @@
 // Place all the styles related to the tasks controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+//task全体 
+ul{
+  list-style: none;
+}
+
+// index
+table{
+  margin-left: 10px;
+}
+.row{
+  margin: 5px;
+  margin-right: 30px;
+}
+.index-menu{
+  margin-bottom: 10px;
+}
+.index_btn{
+  width: 15px;
+}
+th{
+  text-align: center;
+  background-color: blanchedalmond;
+}
+.index_form, .index_status{
+  margin: 10px auto;
+}
+
+// _form
+h3{
+  margin-top: 70px;
+  margin-right: auto;
+  margin-bottom: 30px;
+  margin-left: auto;
+}
+.f_form{
+  margin: 20px auto;
+  width: 300px;
+}
+.task_status, .task_priority{
+  width: 240px;
+}
+.form_btn{
+  margin-top: 10px;
+  margin-left: 5px;
+  margin-right: 5px;
+}
+
+// show
+.show_content{
+  font-size: 20px;
+}
+.show_name{
+  margin-top: 20px;
+}
+.f-container{
+  display: flex;
+  margin-bottom: 10px;
+}
+.show_status{
+  width: 100px;
+  margin-left: auto;
+  margin-right: 10px;
+}
+.show_priority{
+  width: 100px;
+  margin-left: 10px;
+  margin-right: auto;
+}
