--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,18 +1,43 @@
-<h1>タスク一覧</h1>
+<h2>タスク一覧</h2>
 <p><%= notice %></p>
-<table>
-  <tr>
-    <th>title</th>
-    <th>content</th>
-  </tr>
-<% @tasks.each do |task| %>
-  <tr>
-    <td><%= task.title %></td>
-    <td><%= task.content %></td>
-    <td><%= link_to '詳細', task_path(task.id) %></td>
-    <td><%= link_to '編集', edit_task_path(task.id) %></td>
-    <td><%= link_to '削除', task_path(task.id), method: :delete, data: {confirm: '削除してよろしいですか？'} %></td>
-  </tr>
-<% end %>
-</table>
-<%= link_to '新規作成', new_task_path %>
+<form class="form-inline">
+  <%= form_with(url: tasks_path, method: :get, local: true) do |f| %>
+    <%= f.text_field :search, placeholder:"タイトルで検索", class:"form-control index_form"%>
+    <%= f.select :status, Task.statuses.keys, {include_blank: 'ステータスを選択してください'}, class:"form-control index_status" %>
+    <%= f.submit '検索', class:"btn btn-default" %>
+  <% end %>
+</form>
+<div class='index-menu'>
+  <%= link_to '新規作成', new_task_path, class:"btn btn-primary" %>
+  <%= link_to 'タスクを終了期限順にソートする', tasks_path(sort_expired:'true'), class:"btn btn-default" %>
+  <%= link_to 'タスクを優先度順にソートする', tasks_path(sort_priority:'true'), class:"btn btn-default" %>
+  <%= link_to '作成日時順にソート', tasks_path, class:"btn btn-default" %>
+</div>
+<div class="contents">
+  <div class="row">
+    <table class='table table-striped table-hover'>
+      <tr class="row">
+        <th class="col-md-1">タスク名</th>
+        <th class="col-md-5">内容</th>
+        <th class="col-md-1">期限</th>
+        <th class="col-md-1">ステータス</th>
+        <th class="col-md-1">優先度</th>
+        <th class="col-md-1"></th>
+        <th class="col-md-1"></th>
+        <th class="col-md-1"></th>
+      </tr>
+      <% @tasks.each do |task| %>
+      <tr class="row">
+        <td class="task_row"><%= task.title %></td>
+        <td><%= task.content %></td>
+        <td><%= task.deadline %></td>
+        <td><%= task.status %></td>
+        <td><%= task.priority %></td>
+        <td class='index_btn'><%= link_to '詳細', task_path(task.id), class:"btn btn-default" %></td>
+        <td class='index_btn'><%= link_to '編集', edit_task_path(task.id), class:"btn btn-default" %></td>
+        <td class='index_btn'><%= link_to '削除', task_path(task.id), method: :delete, data: {confirm: '削除してよろしいですか？'}, class:"btn btn-danger" %></td>
+      </tr>
+      <% end %>
+    </table>
+  </div>
+</div>
