--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -3,5 +3,7 @@
 <p><%= @user.name %></p>
 <p>アドレス</p>
 <p><%= @user.email %></p>
-<%= link_to 'プロフィール編集', edit_user_path(@user.id) %>
+<% if current_user.id == @user.id %>
+  <%= link_to 'プロフィール編集', edit_user_path(@user.id) %>
+<% end %>
 <%= link_to 'タスク一覧へ', tasks_path %>
