--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -1,7 +1,24 @@
-<h3>admin index</h3>
-<ul>
-<% @users.each do |user| %>
-  <li><%= user.id %>：<%= user.name %></li>
-<% end %>
-</ul>
-<%= link_to '新規作成', %>
+<h3>ユーザー一覧</h3>
+<table>
+  <tr>
+    <th>id</th>
+    <th>name</th>
+    <th>タスク数</th>
+    <th>管理者権限</th>
+    <th>作成日時</th>
+  </tr>
+  <% @users.each do |user| %>
+  <tr>
+    <td><%= user.id %></td>
+    <td><%= user.name %></td>
+    <td><%= user.tasks.count %></td>
+    <td><%= user.admin %></td>
+    <td><%= user.created_at %></td>
+    <td><%= link_to '詳細', admin_user_path(user.id) %></td>
+    <td><%= link_to '編集', edit_admin_user_path(user.id) %></td>
+    <td><%= link_to '削除', admin_user_path(user.id),method: :delete, data: {confirm: '削除してよろしいですか？'} %></td>
+  </tr>
+  <% end %>
+</table>
+<%= link_to 'タスク一覧へ', tasks_path %>
+<%= link_to 'ユーザー新規作成', new_admin_user_path %>
