--- a/app/views/admin/users/show.html.erb
+++ b/app/views/admin/users/show.html.erb
@@ -34,7 +34,7 @@
     </table>
   </div>
 </div>
-<%= link_to 'タスク一覧へ', tasks_path %>
+<%= link_to 'タスク一覧へ', tasks_path, class:"btn btn-default" %>
 <% if current_user.admin? %>
-  <%= link_to '管理者画面へ', admin_users_path %>
+  <%= link_to '管理者画面へ', admin_users_path, class:"btn btn-default" %>
 <% end %>
