--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,11 +18,14 @@
       <%= content_tag(:div, value, class: "#{key}") %>
     <% end %>
     <% if logged_in? %>
-      <%= link_to "Profile", user_path(current_user.id) %>
-      <%= link_to "Logout", session_path(current_user.id), method: :delete %>
+      <%= link_to "Profile", user_path(current_user.id), class:"btn btn-primary" %>
+      <%= link_to "Logout", session_path(current_user.id), method: :delete, class:"btn btn-primary" %>
+      <% if current_user.admin? %>
+        <%= link_to "管理者画面へ", admin_users_path, class:"btn btn-default" %>
+      <% end %>
     <% else %>
-      <%= link_to "Sign up", new_user_path %>
-      <%= link_to "Login", new_session_path %>
+      <%= link_to "Sign up", new_user_path, class:"btn btn-primary" %>
+      <%= link_to "Login", new_session_path, class:"btn btn-primary" %>
     <% end %>
     <%= yield %>
   </body>
