--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -9,15 +9,23 @@
     <% end %>
   </ul>
 <% end %>
-  <%= f.label :name %>
-  <%= f.text_field :name %>
-  <%= f.label :email %>
-  <%= f.email_field :email %>
+  <div class="f_form task_title form-group">
+    <%= f.label :name %>
+    <%= f.text_field :name, class:"form-control" %>
+  </div>
+  <div class="f_form task_title form-group">
+    <%= f.label :email %>
+    <%= f.email_field :email, class:"form-control" %>
+  </div>
   <% if action_name == 'new' %>
-    <%= f.label :password %>
-    <%= f.password_field :password %>
-    <%= f.label :password_confirmation %>
-    <%= f.password_field :password_confirmation %>
+    <div class="f_form task_title form-group">
+      <%= f.label :password %>
+      <%= f.password_field :password, class:"form-control" %>
+    </div>
+    <div class="f_form task_title form-group">
+      <%= f.label :password_confirmation %>
+      <%= f.password_field :password_confirmation, class:"form-control" %>
+    </div>
   <% end %>
-  <%= f.submit "Create my account" %>
+  <%= f.submit "新規作成", class:"btn btn-primary" %>
 <% end %>
