--- a/app/views/admin/users/show.html.erb
+++ b/app/views/admin/users/show.html.erb
@@ -1,8 +1,6 @@
 <h3><%= @user.name %>さんのプロフィール</h3>
-<p>名前</p>
-<p><%= @user.name %></p>
-<p>アドレス</p>
-<p><%= @user.email %></p>
+<p>名前：<%= @user.name %></p>
+<p>アドレス：<%= @user.email %></p>
 <% if current_user.id == @user.id %>
   <%= link_to 'プロフィール編集', edit_user_path(@user.id) %>
 <% end %>
