--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,8 +1,6 @@
 <h3><%= @user.name %>さんのプロフィール</h3>
-<p>名前</p>
-<p><%= @user.name %></p>
-<p>アドレス</p>
-<p><%= @user.email %></p>
+<p>名前：<%= @user.name %></p>
+<p>アドレス：<%= @user.email %></p>
 <div class="contents">
   <div class="row">
     <table class='table table-striped table-hover'>
