管理者が他ユーザーのプロフィールを編集できない件,N+1問題への対応

--- a/app/views/admin/users/edit.html.erb
+++ b/app/views/admin/users/edit.html.erb
@@ -25,5 +25,5 @@
       <%= f.check_box :admin, {}, true, false %>
     </label>
   </div>
-  <%= f.submit "Update account", class:"btn btn-primary" %>
+  <%= f.submit "編集", class:"btn btn-primary" %>
 <% end %>
