--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -1,4 +1,4 @@
-<h3>ユーザー一覧</h3>
+<h2>ユーザー一覧</h2>
 <div class="contents">
   <div class="row">
     <table class='table table-striped table-hover'>
@@ -19,7 +19,7 @@
         <td><%= user.name %></td>
         <td><%= user.email %></td>
         <td><%= user.tasks.count %></td>
-        <td><%= user.admin %></td>
+        <td><%= user.admin? ? '管理者' : '一般ユーザー' %></td>
         <td><%= user.created_at %></td>
         <td class='index_btn'><%= link_to '詳細', admin_user_path(user.id), class:"btn btn-default" %></td>
         <td class='index_btn'><%= link_to '編集', edit_admin_user_path(user.id), class:"btn btn-default" %></td>
