--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,5 +1,4 @@
 <h2>タスク一覧</h2>
-<p><%= notice %></p>
 <form class="form-inline">
   <%= form_with(url: tasks_path, method: :get, local: true) do |f| %>
     <%= f.text_field :search, placeholder:"タイトルで検索", class:"form-control index_form"%>
@@ -18,10 +17,11 @@
     <table class='table table-striped table-hover'>
       <tr class="row">
         <th class="col-md-1">タスク名</th>
-        <th class="col-md-5">内容</th>
+        <th class="col-md-3">内容</th>
         <th class="col-md-1">期限</th>
         <th class="col-md-1">ステータス</th>
         <th class="col-md-1">優先度</th>
+        <th class="col-md-2">ラベル</th>
         <th class="col-md-1"></th>
         <th class="col-md-1"></th>
         <th class="col-md-1"></th>
@@ -33,6 +33,11 @@
         <td><%= task.deadline %></td>
         <td><%= task.status %></td>
         <td><%= task.priority %></td>
+        <td>
+          <% task.labels.each do |label| %>
+            <span class="label label-success"><%= label.label_name %></span>
+          <% end %>
+        </td>
         <td class='index_btn'><%= link_to '詳細', task_path(task.id), class:"btn btn-default" %></td>
         <td class='index_btn'><%= link_to '編集', edit_task_path(task.id), class:"btn btn-default" %></td>
         <td class='index_btn'><%= link_to '削除', task_path(task.id), method: :delete, data: {confirm: '削除してよろしいですか？'}, class:"btn btn-danger" %></td>
