--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -6,10 +6,11 @@
     <table class='table table-striped table-hover'>
       <tr class="row">
         <th class="col-md-1">タスク名</th>
-        <th class="col-md-5">内容</th>
+        <th class="col-md-3">内容</th>
         <th class="col-md-1">期限</th>
         <th class="col-md-1">ステータス</th>
         <th class="col-md-1">優先度</th>
+        <th class="col-md-2">ラベル</th>
         <th class="col-md-1"></th>
         <th class="col-md-1"></th>
         <th class="col-md-1"></th>
@@ -21,6 +22,11 @@
         <td><%= task.deadline %></td>
         <td><%= task.status %></td>
         <td><%= task.priority %></td>
+        <td>
+          <% task.labels.each do |label| %>
+            <span class="label label-success"><%= label.label_name %></span>
+          <% end %>
+        </td>
         <td class='index_btn'><%= link_to '詳細', task_path(task.id), class:"btn btn-default" %></td>
         <% if current_user.id == task.user_id %>
           <td class='index_btn'><%= link_to '編集', edit_task_path(task.id), class:"btn btn-default" %></td>
